--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Performance</h2>
+        <h2 class="title is-3">Dialogue State Tracking Performance</h2>
         <p>          
           We perform our experiments with three backbone LLMs (Llama, Mistral, Gemma) on two established task-oriented datasets (MultiWOZ and Snips). Our empirical findings (shown in Figure 3) demonstrate that this approach not only enables reliable estimation of AI agent errors but also guides the LLM decoder in generating more accurate actions. We observe around 3% absolute improvement in joint goal accuracy by incorporating accountability heads in modern LLMs for the MultiWOZ dataset. We also show that this method enables the agent to self-correct its actions, further boosting its performance by 3%.
         </p>     
@@ -389,8 +389,8 @@
           </figure>
         </div>
         <div class="has-text-centered"> 
-          <figure class="image is-inline-block"> 
-            <img src="static/images/amd_result2.png" alt="MY ALT TEXT"/>
+          <figure class="image is-inline-block" style="width: 50%"> 
+            <img src="static/images/amd_result_compare.png" alt="MY ALT TEXT"/>
             <figcaption>Figure 4: JGA comparison between various DST models on the MultiWOZ 2.4 test data.</figcaption>
           
           </figure>
