--- a/index.html
+++ b/index.html
@@ -368,6 +368,11 @@
           </figure>
         </div>
         <p>The slot probabilities output by the classifier or the accountability head can be used to self-correct (SC) the generated dialogue state. Algo 1 shows the dialogue state correction algorithm. The first step of the algorithm attempts to filter the possible false positives, while the second step helps to include the possible false negatives.</p>
+        <div class="has-text-centered"> 
+          <figure class="image is-inline-block" style="width: 75%"> 
+            <img src="static/images/amd_algo.png" alt="MY ALT TEXT"/>
+          </figure>
+        </div>
       </div>
     </div>
   </div>
