--- a/index.html
+++ b/index.html
@@ -422,6 +422,26 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Preventing User Overeliance with Accountability Model</h2>
+        <p>   
+          We study the application of our accountability modeling to prevent user overreliance on real-world task-oriented conversation. The approach is based on introducing <a href="https://merterm.github.io/positive-friction/">positive friction</a> like user confirmations that can eventually lead to successful task completion. In this experiment, rather than automatically correcting the dialogue state, the system inserts friction turns to request clarification on uncertain slots directly from the user. We conduct this experiment using a user simulator (GPT-4o) where the user simulator is asked to confirm detected false positives and false negatives. The method achieves comparable DST performance compared to the self-correction method as shown in Figure 6.
+        </p>    
+        <br>    
+        <div class="has-text-centered"> 
+          <figure class="image is-inline-block" style="width: 50%"> 
+            <img src="static/images/amd_user_sim_result.png" alt="MY ALT TEXT"/>
+            <figcaption>Figure 6: Impact of correcting dialogue state using user simulator on MultiWOZ test data. SC and UC denote self-correction and user confirmation, respectively.</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
