--- a/index.html
+++ b/index.html
@@ -554,15 +554,14 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{dey2025preventingoverreliancetaskorientedconversational,
-        title={Towards Preventing Overreliance on Task-Oriented Conversational AI Through Accountability Modeling}, 
-        author={Suvodip Dey and Yi-Jyun Sun and Gokhan Tur and Dilek Hakkani-Tur},
-        year={2025},
-        eprint={2501.10316},
-        archivePrefix={arXiv},
-        primaryClass={cs.CL},
-        url={https://arxiv.org/abs/2501.10316},
-      }
+      <pre><code>@misc{dey2025knowmistakespreventingoverreliance,
+      title={Know Your Mistakes: Towards Preventing Overreliance on Task-Oriented Conversational AI Through Accountability Modeling}, 
+      author={Suvodip Dey and Yi-Jyun Sun and Gokhan Tur and Dilek Hakkani-Tur},
+      year={2025},
+      eprint={2501.10316},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2501.10316},}
       </code></pre>
     </div>
 </section>
